login input overflow mobile fix, emoji background color fix, implement local storage to store current theme, and adjust comment loading indicator styling

--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,7 @@ svg {
 [hidden]{
   display: none !important;
 }
+
+em-emoji-picker{
+  --rgb-background: rgba(0,0,0,0);
+}
